--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "sinar-real",
   "version": "0.0.1",
   "dependencies": {
-    "express": "3.2.x"
+    "express": "3.2.x",
+    "mongoose": "3.6.11"
+  },
+  "devDependencies": {
+    "mongoose": "3.6.11",
+    "supervisor": "0.5.2"
   },
   "engines": {
     "node": "0.10.x",
